--- a/Css/footerHeader.css
+++ b/Css/footerHeader.css
@@ -2,19 +2,26 @@
 .footer{
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: #51034f;
     padding-top: 3.5%;
     padding-bottom: 3.5%;
     color: white;
 }
 .footer img{
-    margin-left: 12%;
+    margin-right: 0rem;
     border-radius: 50%;
+}
+.header .imgutp{
+    width: 130px;
+}
+.imgutp{
+    width: 550;
 }
 .footer h3, footer a{
     margin-left: 2.5%;
     font-weight: normal;
-    font-size: 1vw;
+    font-size:0.8rem;
 }
 @media (min-width: 768px){
 .header{
@@ -22,6 +29,7 @@
     justify-content:space-between;
     align-items: center;
 }
+
 
 
 } 
@@ -78,8 +86,8 @@
 }
 
 .imagen p{
-    font-size: 1.2rem;
-    margin-left: 1%;
+    font-size: 2rem;
+    
     margin-top: 1%;
 }
 
@@ -95,11 +103,11 @@
   }
 
   .author-card {
-      margin-right: 1rem;
+      margin-right: 2rem;
     display: flex;
     align-items: center;
     gap: 0.75rem;
-    padding: 0.7rem;
+    padding: 1.15rem;
     min-width: 14rem;
     border-color: #4c4954;
     border-radius: 0.5rem;
@@ -109,22 +117,22 @@
   }
 
   .author-img {
-    width: 3rem;
-    height: 3rem;
+    width: 4rem;
+    height: 4rem;
   }
 
   .author-h2 {
     margin: 0 0 2px;
     line-height: 1;
     font-weight: 600;
-    font-size: 0.975rem;
+    font-size: 1.575rem;
   }
 
   .author-h3 {
     margin: 0;
     line-height: 1;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1.25rem;
     color: #a19eab;
   }
 
