Funcionalidad de Recuperar Contraseña
Se añadieron procesos para enviar el email al usuario y el procesos para cambiar la contraseña y las paginas para hacer la peticion y la del formalario para cambiar la contraseña.

--- a/CSS/registrarse.css
+++ b/CSS/registrarse.css
@@ -52,6 +52,16 @@
   
   body {
     background-color: purple; }
+
+  .column{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .caducado{
+    text-align: center;
+    margin: 9.5rem;
+  }
   
   @media (min-width: 768px) {
     .contenedor-estetica {
