--- a/CSS/Perfil.css
+++ b/CSS/Perfil.css
@@ -1,24 +1,26 @@
 html {
-    box-sizing: border-box;
-    font-size: 62.5%;
-    font-family: "Euclid Circular A", Poppins;
-    
-  }
-  *,
-  *:before,
-  *:after {
-    box-sizing: inherit;
-  }
+  box-sizing: border-box;
+  font-size: 62.5%;
+  font-family: "Euclid Circular A", Poppins;
   
-  /** Globales**/
-  
-  body {
-    font-family: "Euclid Circular A", Poppins;
-    font-size: 1.6rem;
-    line-height: 1.5;
-    background: #ffffff;
-  
-  }
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+.pedido .h2{
+   margin-top: 1rem;
+    font-size: 1.5rem;
+}
+
+
+body{
+  margin: 0px;
+  font-family: "Euclid Circular A", Poppins;
+  font-size: 62%;
+  overflow-x: hidden;
+}
 
 
 
@@ -124,6 +126,7 @@ place-items: center;
   text-align: center;
   padding-bottom: 1.5rem;
   padding-top: 1.5rem;
+  font-size: 1.2rem;
 }
 
 
@@ -181,6 +184,7 @@ input{
 }
 
 [type="file"] {
+  font-size: 1.2rem;
   border-radius: 0.2rem;
   width: 35rem;
   background: #ffffff;
@@ -303,16 +307,14 @@ input{
   cursor: pointer;
   padding: 1rem;
   text-transform: uppercase;
-  font-weight: 600;
+  font-weight: 800;
   background-color: #fff;
   border-radius: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .presForm:hover{
   text-decoration: underline;
 }
 
-.link{
-  padding-left: 5.5rem;
-}
 
