--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -78,12 +78,15 @@ body{
     width: auto;
 }
 .ComidasMenu{
-
     margin-top: 1rem;
-   display: flex;
-   text-align: center;
-   justify-content: space-between;
-   flex-direction: column;
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.ComidasMenu h4{
+    font-size: 1.2vw;
+    margin: 0 0 5% 0;
 }
 .comidas-titulo{
    font-size: 1.3rem;
@@ -434,7 +437,7 @@ tr th, tr td{
     }
 
     .div1 { grid-area: 1 / 1 / 3 / 7; }
-    .div2 { grid-area: 2 / 1 / 2 / 7; }
+    .div2 { grid-area: 2 / 1 / 2 / 7; margin: 2% 0 0 0; }
     .div3 { grid-area: 3 / 1 / 3 / 5; }
     .div4 { grid-area: 3 / 5 / 3 / 7; }
 }
@@ -580,4 +583,30 @@ tr th, tr td{
 }
 .fotosDeCafeterias img{
     border-radius: 10px;
+}
+.verCombo input{
+    width: 100%;
+    font-size: 1.5vw;
+    background-color: #68086c;
+    border-radius: 5px;
+    color: white;
+    margin: -25% 0 0 0;
+    padding: 2% 5% 2% 5%;
+    transition: all .35s;
+}
+.verCombo input:hover{
+    background-color: #51034f;
+
+}
+.NombreCafeteria{
+    font-size: 1.5vw;
+}
+.proTitulo{
+    width: 100%;
+    background-color: #68086c;
+    color: white;
+    font-size: 1.5vw;
+    text-align: center;
+    padding: 2% 0 2% 0;
+    margin: -5% 0 0 0;
 }
