--- a/Css/login.css
+++ b/Css/login.css
@@ -31,17 +31,14 @@
     img {
       border-style: none; }
   
-  h1, h2, h3 {
-    margin: 0 0 2.5rem 0;
-    font-weight: 600;
-    color: #ffffff;
-    text-align: center; }
+ 
   
   h1 {
     font-size: 1rem; }
   
   h2 {
-    font-size: 3.5rem; }
+    color: #e7e7e7;
+    font-size: 2.3rem; }
   
   h3 {
     font-size: 3rem;
@@ -82,7 +79,8 @@ background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;      
        }
-       
+
+    
     }
 
 @media (max-width: 767px){
@@ -91,6 +89,10 @@ background-size: cover;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    
+  }
+  header p{
+    margin-bottom: 2rem;
   }
     
 } 
@@ -371,9 +373,29 @@ background-size: cover;
 
         .p{
           max-width: 90%;
-          font-size: 1.5rem;
+        }
+
+
+        .cuenta{
+          font-size: 2.3rem;
+          margin-left: 0.5rem;
+          color: #a4a4a4;
+          font-weight: 600;
+
+        }
+        .cuenta:hover{
+          color: #f7f7fe;
+        }
+
+        .title{
+          display: flex;
+          align-items: center;
+          justify-content: space-around;
+          gap: 3rem;
+         color: white;
         }
 
         .h2{
-          margin-top: -2rem;
+          border-right: 2px solid #ffffff;
+          padding-right: 4rem;
         }
