--- a/Css/popup.css
+++ b/Css/popup.css
@@ -17,9 +17,29 @@
     padding: 3%;
     position: relative;
 }
-
 .popup{
     margin: 15% 0 0 0;
+}
+.popupPagar{
+    margin: 7% 0 0 0;
+}
+.popupPagar h3, .popup h3{
+    background-color: #68086c; /*#51034f;*/
+    color: white;
+    width: 100%;
+    margin: -2% 0 0 0;
+    padding: 1%;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+.popup-closePagar, .popup-close{
+    color: white;
+    padding: 1% 3%;
+    text-align: center;
+    font-size: 5vw;
+    background-color: #51034f;
+    border: 5px;
 }
  
 .popupPagar a, .popup a{
@@ -44,14 +64,52 @@
 .popup-contentPagar h3, .popup-content h3{
     font-size: 3vw;
 } 
+.popup-contentPagar button{
+    margin: 0 0 -4% 0;
+}
+.datosTarjeta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.divTarjetas{
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 2% 0 -2% 14%;
+}
 .tarjetaIzquierda, .tarjetaDerecha{
-    width: 40%;
+    width: 30%;
     margin: 2.5% 2.5% 2.5% 2.5%;
+    text-align: left;
+}
+.tarjetaDerecha input, .tarjetaIzquierda input{
+    padding: 1% 2%;
+    background-color: white;
+    border: 1px solid black;
+    width: 30%;
+    font-size: 1.2vw;
+}
+.dI1{
+    border-right: 2px solid #51034f;
+    width: 50%;
+}
+.dI2{
+    border-left: 2px solid #51034f;
+    width: 50%;
 }
 .tarjetaIzquierda h4, .tarjetaIzquierda h5, .popup-close, .popup-closePagar{
     font-size: 1.6vw;
+    margin: 2% 0 1% 0;
 }
 .confirmarCompra{
     padding: 0 10% 0 10%;
-    margin: 0 2.5% 0 2.5%;
+    margin: 2% 2.5% 0 2.5%;
+}
+.divImg img{
+    margin: 3% 5% 3% 5%;
+}
+.divImg h4{
+    font-size: 2vw;
 }
