--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -315,6 +315,7 @@ nav a:hover{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 .soloCuatro .card{
     width: 25%;
@@ -430,13 +431,13 @@ tr th, tr td{
     .parent {
         display: grid;
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: repeat(1, 1fr);
         grid-column-gap: 0px;
         grid-row-gap: 0px;
         gap: 2rem;
     }
 
-    .div1 { grid-area: 1 / 1 / 3 / 7; }
+    .div1 { grid-area: 1 / 1 / 1 / 7; }
     .div2 { grid-area: 2 / 1 / 2 / 7; margin: 2% 0 0 0; }
     .div3 { grid-area: 3 / 1 / 3 / 5; }
     .div4 { grid-area: 3 / 5 / 3 / 7; }
