Procesos para eliminar el hash, correo para los datos del pedido y otras actualizaciones
Se añadieron los procesos para el contro de la eliminacion del hash en un tempo determinado, un correo de ejemplo para el envio de los datos del pedido y ajustes para lograr agregar la foto del producto.

--- a/Css/login.css
+++ b/Css/login.css
@@ -371,10 +371,25 @@ background-size: cover;
       font-size: 1.5rem;
         }
 
+        .msg p{
+          text-align: center;
+          margin: 0;
+          font-weight: 600;
+          text-overflow: ellipsis;
+          text-transform:uppercase;
+        }
+
         .p{
           max-width: 90%;
         }
 
+        .exito{
+          color: green;
+        }
+        
+        .error{
+          color:red;
+        }
 
         .cuenta{
           font-size: 2.3rem;
