--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -311,29 +311,32 @@ nav a:hover{
     background-color: #51034f;
 }
 .soloCuatro{
+    margin-left: 2.2rem;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: safe;
     flex-wrap: wrap;
 }
 .soloCuatro .card{
-    width: 20%;
+    width: 22%;
     
 }
 .soloTres1, .soloTres2{
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: start;
+    flex-wrap: wrap;
+ 
 }
 .soloTres1 .card, .soloTres2 .card{
-    width: 100%;
+    width: 20%;
   
 }
 .soloTres2 .card{
-    width: 47%;
-    float: left;
+    width: 22%;
+    
 }
 @keyframes hacerPedido{
     0%{
