--- a/Css/estadisticas.css
+++ b/Css/estadisticas.css
@@ -28,7 +28,7 @@ body{
     justify-content: left;
     margin-left: 5%;
 }
-.Campos h2{
+.Camposh2{
     margin-right: 5%;
 }
 .Campos form .buscar{
@@ -38,13 +38,28 @@ body{
     font-size: large;
     right: 0%;
 }
-.TituloCompleto{
-    background-color: #2d2d2d;
-    color: white;
-    padding-top: 1.9%;
-    padding-bottom: 1.9%;
-    font-size: x-large;
+
+.headimg{
+    background-image: url(../Imagenes/3.jpg_large);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height:410px;
+    margin-bottom: 2rem;
+    position: relative;
+    background-position: center center;
 }
+.TituloCompleto{
+    position: absolute;
+    color: #fff;
+    position: absolute;
+    background-color: rgba(0,0,0,.7);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+align-items: center;
+justify-content: center;
+    }
 table, tr, td{
     border: 1px solid black;
     font-size: x-large;
