--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -378,7 +378,10 @@ tr th, tr td{
     font-size: 1.6vw;
 }
 .TituloCompleto h1{
-    font-size: 4vw;
+    margin: 0;
+    padding: 0;
+    font-size: 4rem;
+   
 }
 @media screen and (max-width: 768px){
     .header div{
@@ -621,3 +624,9 @@ tr th, tr td{
 .ComidasMenu{
     margin: 0 0 0 5%;
 }
+
+.carousel.is-fullscreen .carousel-cell {
+    height: 100%;
+  
+  }
+  
