Control de fecha y tiempo
Se controla pedir 1 comida por turno, se despliegan los productos según la hora del día y arreglo en el Carousel de las imágenes de la cafeterías del menú principal

--- a/Css/footerHeader.css
+++ b/Css/footerHeader.css
@@ -1,12 +1,10 @@
 
 .footer{
-    
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #51034f;
-    padding-top: 3.5%;
-    padding-bottom: 3.5%;
+    padding: 3.5% 0 3.5% 0;
     color: white;
 }
 .footer img{
