--- a/Css/formHacerPedido.css
+++ b/Css/formHacerPedido.css
@@ -2,11 +2,14 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     font-family: "Euclid Circular A", Poppins;
+    margin: 0;
+    padding: 0;
     
   }
   *,
   *:before,
   *:after {
+      
     box-sizing: inherit;
   }
  .pedido .h2{
@@ -32,45 +35,98 @@ body{
     font-size: large;
 }
 .barraLateral{
+    
     width: 30%;
     background-color: #e8e8e8;
-    border: 2px solid black;
+    border-right: 1px solid rgb(104, 104, 104);
+    padding-right: 2rem;
+    
 }
 .barraLateral a{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 2rem;
     width: 90%;
     margin-left: 5%;
     text-decoration: none;
     color: black;
-    font-size: x-large;
-    border: 2px solid black;
+   font-size: 2.5rem;
+   font-weight: 500;
+    border-bottom: 2px solid black;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    opacity: 0.8;
+}
+
+
+
+.barraLateral a:hover{
+    background-color: #68086c;
+    color: white;
+    opacity: 1;
 }
 .barraLateral h2{
+    border-radius: 0.5rem;
     background-color: #68086c;
     color: white;
     padding-top: 2%;
     padding-bottom: 2%;
 }
 .otraBarra{
+    border-radius: 0.5rem;
+    padding-left: 2rem;
     width: 70%;
     background-color: #e8e8e8;
     border: 2px solid black;
+    border: none;
 }
 .otraBarra h2{
+    border-radius: 0.5rem;
     background-color: #68086c;
     color: white;
     padding-top: 0.8%;
     padding-bottom: 0.8%;
 }
 .datosProductos{    
-    font-size: x-large;
+    font-size: 2rem;
     display: flex;
     justify-content: flex-start;
-    margin-left: 2%;
     align-items: center;
+    gap: 3rem;
 }
 .datosProductos input, .datosProductos select, .otraBarra input{
-    font-size: large;
-    margin-left: 2%;
+    font-size: 2rem;
     border-radius: 5px;
+    border: none;
+    box-sizing: content-box;
+  
 }
+
+[type="file"] {
+    font-size: 1.2rem;
+    border-radius: 0.2rem;
+    width: 35rem;
+    background: #ffffff;
+    /* Style the color of the message that says 'No file chosen' */
+      color: #878787;
+    }
+    [type="file"]::-webkit-file-upload-button {
+      background: purple;
+      border: 2px solid transparent;
+      border-radius: 0.5rem 2rem 2rem 0.5rem;
+      color: #fff;
+      cursor: pointer;
+      font-size: 1.25rem;
+      font-weight: 600;
+      outline: none;
+      padding: 10px 25px;
+      text-transform: uppercase;
+      transition: all 1s ease;
+    }
+    
+    [type="file"]::-webkit-file-upload-button:hover {
+  
+      border: 2px solid #535353;
+    }
