--- a/CSS/atenderOrdenes.css
+++ b/CSS/atenderOrdenes.css
@@ -66,6 +66,7 @@ margin-bottom: 2rem;
     align-items: center;
     justify-content: space-between;
     gap: 15rem;
+    margin-bottom: 2rem;
     
 }
 
@@ -84,13 +85,14 @@ margin-bottom: 2rem;
     justify-content: center;
     flex-direction: column;
     
+    
 }
 
 .order-code h4{
     width: 30vw;
     display: grid;
     grid-template-columns: 1fr auto 1fr ;
-    gap: 1rem;
+    gap: 2rem;
     font-size: 1.3rem;
     font-weight: 600;
 
@@ -136,6 +138,9 @@ label{
     text-decoration: underline;
    
 }
+.order-pedido{
+    margin-right: 3rem;
+}
 
 .order-pedido-info2{
     display: flex;
@@ -149,6 +154,7 @@ label{
     font-size: 1.5rem;
     font-weight: 600;
     color: rgb(122, 122, 122);
+    margin-left: 1.5rem;
 
 }
 
