Muchos cambios, leer descripción
Ya se pueden comprar los combos, sólo que directo desde la página principal, pero no salía de qué cafetería era el combo así que lo coloqué debajo del precio... También toda la lógica en la bd y en las tablas precisas para que aparezcan como una orden y se puedan atender. Arreglé también la página de atender órdenes porque los que atienden no iban a saber qué llevaba cada orden

--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -604,7 +604,7 @@ tr th, tr td{
 .fotosDeCafeterias img{
     border-radius: 10px;
 }
-.verCombo input{
+.verCombo button{
     width: 100%;
     font-size: 1.5vw;
     background-color: #68086c;
@@ -614,7 +614,7 @@ tr th, tr td{
     padding: 2% 5% 2% 5%;
     transition: all .35s;
 }
-.verCombo input:hover{
+.verCombo button:hover{
     background-color: #51034f;
 
 }
