update hacer pedidos

--- a/Css/login.css
+++ b/Css/login.css
@@ -168,7 +168,7 @@ background-size: cover;
           align-items: center;
           justify-content: center;
           flex-direction: column;
-          gap: 2rem;
+          
         }
         
         
@@ -474,4 +474,5 @@ display: flex;
 align-items: center;
 justify-content: center;
 height: 14rem;
+margin-top: -5rem;
 }
