--- a/CSS/atenderOrdenes.css
+++ b/CSS/atenderOrdenes.css
@@ -27,12 +27,16 @@ display: flex;
 align-items: center;
 justify-content: center;
 flex-wrap: wrap;
-gap: 2rem;
+gap: 5rem;
 margin-bottom: 2rem;
 
 }
 
 .ordenes{
+    border-radius: 50px;
+background: #ffffff;
+box-shadow:  20px 20px 60px #d9d9d9,
+             -20px -20px 60px #ffffff;
     border: 2px solid rgb(255, 0, 0);
     padding: 5rem;
     border-radius: 0.5rem;
@@ -55,6 +59,7 @@ margin-bottom: 2rem;
     padding-top: 1rem;
 }
 .ordenes p{
+    pointer-events: none;
     font-size: 1.5rem;
     margin-top: 0.3rem;
    
