--- a/Android/app/src/main/res/layout/activity_menu_login.xml
+++ b/Android/app/src/main/res/layout/activity_menu_login.xml
@@ -50,88 +50,27 @@
                 />
         </LinearLayout>
 
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ingrese su correo"
+            android:text="Bienvenido"
             android:textStyle="bold"
-            android:textSize="19dp"
+            android:textSize="30dp"
+            android:gravity="center"
             android:textColor="#ffffff"
-            />
-        <EditText
-            android:id="@+id/txtUser"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Correo@gmail.com"
-            android:layout_marginBottom="20dp"
-            android:drawableLeft="@drawable/persona_icon"
-            android:drawablePadding="10dp"
-            android:textColorHint="#ffffff"
-            android:textColor="#ffffff"
-            android:backgroundTint="#ffffff"
             />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ingrese su contraseña"
-            android:textStyle="bold"
-            android:textSize="19dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="80dp"
+            android:textStyle="italic"
+            android:textSize="30dp"
             android:textColor="#ffffff"
-            />
-        <EditText
-            android:id="@+id/txtPasss"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Contraseña"
-            android:textColorHint="#ffffff"
-            android:textColor="#ffffff"
-            android:inputType="textPassword"
-            android:layout_marginBottom="20dp"
-            android:drawableLeft="@drawable/password_icon"
-            android:drawablePadding="10dp"
-            android:singleLine="true"
-            android:backgroundTint="#ffffff"
-            />
+            android:id="@+id/txtNombreLogin"
+            android:gravity="center"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="LOGIN"
-            android:textFontWeight="700"
-            android:textSize="18dp"
-            android:layout_marginBottom="15dp"
-            android:onClick="IniciarSesion"
-            style="?attr/materialButtonOutlinedStyle"
-            app:cornerRadius="20dp"
-            app:strokeColor="#98289c"
-            android:textColor="#98289c"
-            android:backgroundTint="@color/white"
-            android:id="@+id/btnLogin"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="registrarse"
-            android:textFontWeight="700"
-            android:textSize="18dp"
-            android:onClick="Registrarse"
-            style="?attr/materialButtonOutlinedStyle"
-            app:cornerRadius="20dp"
-            app:strokeColor="#98289c"
-            android:textColor="#98289c"
-            android:backgroundTint="@color/white"
-            android:id="@+id/btnRegistrarse"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="¿OLVIDASTES TU CONTRASEÑA?"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:textColor="#ffffff"
-            android:textStyle="bold"
-            android:onClick="RecuperarContraseña"/>
     </LinearLayout>
 
     <LinearLayout
