--- a/Css/login.css
+++ b/Css/login.css
@@ -339,11 +339,6 @@ background-size: cover;
             
           
         }
-
-        .logeaar{
-         
-         
-        }
         .item input{
           cursor: pointer;
           background-color: #fff;
@@ -470,9 +465,10 @@ flex-direction: column;
 
 
 .block-component {
-display: flex;
-align-items: center;
-justify-content: center;
-height: 14rem;
-margin-top: -5rem;
+  padding: -5% 0 -5% 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 14rem;
+  margin-top: -5rem;
 }
