--- a/Css/paginaPrincipal.css
+++ b/Css/paginaPrincipal.css
@@ -126,6 +126,10 @@ body{
     margin-left: 5%;
     filter: drop-shadow(2px 6px 4px black);
 }
+.imgComidas{
+    height: 210px;
+    object-fit:scale-down;
+}
 .FotoComida:hover{
     opacity: 80%;
 }
@@ -667,4 +671,24 @@ tr th, tr td{
 }
 .cambiarEstado input:hover{
     background-color: #51034f;
+}
+@keyframes resaltar {
+
+    0%{
+        background-color: #51034f;
+        color: white;
+        text-shadow: 0vw 0vw 35px;
+        border: 2px solid blue;
+    }
+    50%{
+        background-color: #68086c;
+        border: 2px solid white;
+    }
+    100%{
+        background-color: #51034f;
+        color: white;
+        text-shadow: 0vw 0vw 35px;
+        border: 2px solid red;
+    }
+    
 }
