Mejora en footer y querys
En el footer puse los enlaces a las entidades para redirigirlos a las páginas en otra pestaña, mejoré el query de la página principal del combo, porque había un dato quemado y el query de atender las órdenes para que desplegara las órdenes de ese día y en el query del historial de compra para traer la data mejor ordenada

--- a/Css/footerHeader.css
+++ b/Css/footerHeader.css
@@ -85,6 +85,9 @@
     color: white;
     margin-bottom: 0.2%;
 }
+.footer div a:hover, .footer h3 a:hover{
+    text-decoration: underline white;
+}
 
 .imagen p{
     font-size: 2rem;
