--- a/Css/drpdwn.css
+++ b/Css/drpdwn.css
@@ -121,3 +121,16 @@
    .tBody input{
      color: rebeccapurple;
     }
+
+    
+
+    .hp{
+      padding: 1.2rem;
+      border-radius: 0.5rem;
+
+    }
+
+    .fhp{
+      padding: 1.2rem;
+      border-radius: 0.5rem;
+    }
